# swift

./: CMakeLists.txt  README.md
benchmark/: Package.swift  README.md
benchmark/scripts/: Benchmark_DTrace.in  Benchmark_QuickCheck.in  Benchmark_RuntimeLeaksRunner.in  build_script_helper.py
benchmark/single-source/: AngryPhonebook.swift  BitCount.swift  ByteSwap.swift  Calculator.swift  DictionaryBridge.swift  Hanoi.swift  IterateData.swift  MapReduce.swift  NSDictionaryCastToSwift.swift  NSError.swift  NSStringConversion.swift  ObjectiveCBridging.swift  ObjectiveCBridgingStubs.swift  ObjectiveCNoBridgingStubs.swift  ObserverPartiallyAppliedMethod.swift  ObserverUnappliedMethod.swift  OpenClose.swift  ProtocolDispatch2.swift  RGBHistogram.swift  ReduceInto.swift  SevenBoom.swift  SortLettersInPlace.swift  StringBuilder.swift  Substring.swift
benchmark/utils/: ArgParse.swift  main.swift
cmake/modules/: AddSwift.cmake  AddSwiftExternalStdlib.cmake  SwiftBenchmarkSuiteExternalProject.cmake  SwiftSharedCMakeConfig.cmake
docs/: ARC.rst  OwnershipIdentity.md  SIL.rst  SILOwnership.md  SILOwnershipBigPicture.md  SILProgrammersManual.md  SemanticARC.md  SemanticARCOld.md
lib/: CMakeLists.txt
lib/APIDigester/: ModuleAnalyzerNodes.cpp
lib/AST/: ASTBridging.cpp  (+21 more)
lib/SILGen/: CMakeLists.txt  Cleanup.cpp  Cleanup.h  Lib1.swift  ManagedValue.cpp  ManagedValue.h  RValue.cpp  ResultPlan.cpp  SILGen.cpp  SILGenApply.cpp  SILGenBridging.cpp  SILGenBuilder.cpp  SILGenBuilder.h  SILGenBuiltin.cpp  SILGenConstructor.cpp  SILGenConvert.cpp  SILGenDecl.cpp  SILGenDestructor.cpp  SILGenDynamicCast.cpp  SILGenEpilog.cpp  SILGenExpr.cpp  SILGenFunction.cpp  SILGenFunction.h  SILGenLValue.cpp  SILGenLazyConformance.cpp  SILGenMaterializeForSet.cpp  SILGenPattern.cpp  SILGenPoly.cpp  SILGenProlog.cpp  SILGenStmt.cpp  Scope.cpp  Scope.h
lib/SILOptimizer/: CMakeLists.txt  Package.swift  Package.xcconfig
lib/SILOptimizer/ARC/: ARCBBState.cpp  ARCLoopHoisting.cpp  ARCLoopHoisting.h  ARCLoopOpts.cpp  CMakeLists.txt  EnumRCAnalysis.cpp  EnumRCAnalysis.h  GlobalARCSequenceDataflow.cpp
lib/SILOptimizer/Analysis/: ARCAnalysis.cpp  EscapeAnalysis.cpp  LoopRegionAnalysis.cpp  MemoryBehavior.cpp  RCIdentityAnalysis.cpp  RegionAnalysis.cpp  SideEffectAnalysis.cpp  SimplifyInstruction.cpp
lib/SILOptimizer/Differentiation/: LinearMapInfo.cpp
lib/SILOptimizer/IPO/: EagerSpecializer.cpp
lib/SILOptimizer/Mandatory/: AccessEnforcementSelection.cpp  AccessMarkerElimination.cpp  CMakeLists.txt  CapturePromotion.cpp  DIMemoryUseCollector.cpp  DIMemoryUseCollector.h  DIMemoryUseCollectorOwnership.cpp  DebugInfoCanonicalizer.cpp  DefiniteInitialization.cpp  DiagnoseInfiniteRecursion.cpp  DiagnoseInvalidEscapingCaptures.cpp  DiagnoseUnreachable.cpp  DiagnosticDeadFunctionElimination.cpp  GuaranteedCFGOpts.cpp  MandatoryCombine.cpp  MandatoryInlining.cpp  MandatoryTupleScalarizer.cpp  MoveKillsCopyableAddressesChecker.cpp  MoveOnlyAddressChecker.cpp  MoveOnlyAddressCheckerUtils.cpp  MoveOnlyBorrowToDestructureUtils.cpp  MoveOnlyCanonicalization.cpp  MoveOnlyCanonicalizer.cpp  MoveOnlyChecker.cpp  MoveOnlyDiagnostics.cpp  MoveOnlyTypeEliminator.cpp  MoveOnlyUtils.cpp  MoveOnlyUtils.h  OSLogOptimization.cpp  PMOMemoryUseCollector.cpp  PredictableMemOpt.cpp  SILGenCleanup.cpp  SendNonSendable.cpp  TransferNonSendable.cpp  TupleMemoryOperationCanonicalization.cpp  TupleMemoryOperationCanonicalizer.cpp
lib/SILOptimizer/PassManager/: BridgedPasses.cpp  CMakeLists.txt  PassManager.cpp  PassPipeline.cpp  Passes.cpp
lib/SILOptimizer/SILCombiner/: SILCombine.cpp  SILCombiner.h  SILCombinerBuiltinVisitors.cpp  SILCombinerCastVisitors.cpp
lib/SILOptimizer/SemanticARC/: BorrowScopeOpts.cpp  CMakeLists.txt  Context.cpp  Context.h  CopyValueOpts.cpp  OwnedToGuaranteedPhiOpt.cpp  OwnershipConversionElimination.cpp  OwnershipPhiOperand.h  PhiArgPeepholes.cpp  SemanticARCOptVisitor.cpp  SemanticARCOptVisitor.h  SemanticARCOpts.cpp  SemanticARCOpts.h
lib/SILOptimizer/Transforms/: AllocBoxToStack.cpp  CMakeLists.txt  CopyForwarding.cpp  DeadCodeElimination.cpp  FunctionSignatureOpts.cpp  FunctionSignatureOpts.h  MoveOnlyDeinitDevirtualization.cpp  MoveOnlyDeinitDevirtualizer.cpp  OptRemarkGenerator.cpp  OwnershipModelEliminator.cpp  SILCodeMotion.cpp  SILMem2Reg.cpp  SimplifyCFG.cpp  TempRValueElimination.cpp
lib/SILOptimizer/UtilityPasses/: CMakeLists.txt  InstCount.cpp  ModuleDumper.swift  SerializeSILPass.cpp
lib/SILOptimizer/Utils/: CFG.cpp  CMakeLists.txt  CanonicalOSSALifetime.cpp  CanonicalizeInstruction.cpp  ConstantFolding.cpp  Devirtualize.cpp  Generics.cpp  Local.cpp  LoopUtils.cpp  OwnershipUtils.cpp  PartitionUtils.cpp  PerformanceInlinerUtils.cpp  SILInliner.cpp  SILSSAUpdater.cpp
libswift/: CMakeLists.txt  DisabledLibswiftStub.c  README.md
libswift/Sources/Optimizer/: CMakeLists.txt
libswift/Sources/Optimizer/FunctionPasses/: CMakeLists.txt
libswift/Sources/Optimizer/InstructionPasses/: CMakeLists.txt
libswift/Sources/Optimizer/PassManager/: CMakeLists.txt  PassRegistration.swift
libswift/Sources/SIL/: CMakeLists.txt
libswift/cmake/modules/: AddLibSwift.cmake
stdlib/: CMakeLists.txt
stdlib/cmake/modules/: CMakeLists.txt  SwiftStdlibConfig.cmake.in
stdlib/private/: CMakeLists.txt
stdlib/public/Concurrency/: PartialAsyncTask.swift  Task.cpp
stdlib/public/SDK/: CMakeLists.txt
stdlib/public/SDK/Foundation/: TypePreservingNSNumber.mm
stdlib/public/SwiftShims/: _BoundMemoryChecker.h
stdlib/public/core/: Arrays.swift.gyb  LifetimeManager.swift  UnsafePointer.swift
stdlib/public/runtime/: AnyHashableSupport.cpp  BoundMemoryChecker.cpp  CMakeLists.txt  Casting.cpp  ErrorObject.mm  Exclusivity.cpp  HeapObject.cpp  Leaks.mm  Metadata.cpp  MetadataLookup.cpp  ProtocolConformance.cpp  SwiftObject.mm  SwiftValue.mm
stdlib/public/stubs/: Availability.mm  LibcShims.cpp  OptionalBridgingHelper.mm  Stubs.cpp  UnicodeNormalization.cpp
test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
tools/: CMakeLists.txt
utils/: build-presets.ini  build-script  build-script-impl  sil-mode.el
(+469 files in other folders)
